umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_uracil.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :aromatic-systems [{:atoms [1 2 3 4 5 7] :attrs "[0,1,1,2,0,2]"}]
      :atoms ["O#n2" "C" "C#h" "C#h" "N#h" "C" "O#n2" "N#h"]
      :bonds [
        [0 1 :double]
        [1 7 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :double]
        [5 7 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :aromatic-systems [{:atoms [1 2 3 4 5 7] :attrs "[0,1,1,2,0,2]"}]
      :atoms ["O#n2" "C" "C#h" "C#h" "N#h" "C" "O#n2" "N#h"]
      :bonds [
        [0 1 :double]
        [1 7 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :double]
        [5 7 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :error "resolution contradictory: no matching valence state"
    :success false
    :tie-breaks []}
  :counts-strict {
    :error "resolution contradictory: no matching valence state"
    :success false
    :tie-breaks []}}
