umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_ag+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Ag#c+2#n4#u"] :bonds [] :charge 2 :spin "#u1 #s2"}} :counts {:success true :output {:atoms ["Ag#c+2#n4#u"] :bonds [] :charge 2 :spin "#u1 #s2"}}}
