umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_am+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Am#c+2#u7"] :bonds [] :charge 2 :spin "#u7 #s8"}} :counts {:success true :output {:atoms ["Am#c+2#n3#u"] :bonds [] :charge 2 :spin "#u1 #s2"}}}
