umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_am+4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Am#c+4#u5"] :bonds [] :charge 4 :spin "#u5 #s6"}} :counts {:success true :output {:atoms ["Am#c+4#n2#u"] :bonds [] :charge 4 :spin "#u1 #s2"}}}
